--- a/styles/fonts.sass
+++ b/styles/fonts.sass
@@ -14,14 +14,7 @@
 
 @font-face
   font-family: 'Work Sans'
-  src: url(/fonts/work-sans-500.woff2) format('woff2')
-  font-style: normal
-  font-weight: 500
-  font-display: swap
-
-@font-face
-  font-family: 'Manrope'
-  src: url(/fonts/manrope-500.woff2) format('woff2')
+  src: url(/fonts/work-sans-medium.woff2) format('woff2')
   font-style: normal
   font-weight: 500
   font-display: swap
