--- a/styles/global.sass
+++ b/styles/global.sass
@@ -13,6 +13,7 @@ body
   font-family: $w
   font-weight: 400
   font-size: 18px
+  letter-spacing: -0.05px
   max-width: 100vw
   overflow-x: hidden
 
