--- a/styles/settings.sass
+++ b/styles/settings.sass
@@ -4,15 +4,21 @@ $q: 'Questrial', sans-serif
 
 //colors
 $black: #0E121B
+$black2: #0B213E
+$dark: #48596E
+$dark2: #233751
 $white: #FFFFFF
 $grey-deep: #21293A
 $grey-dark: #373E4E
 $grey: #616875
+$grey2: #85909F
+$grey3: #E7E9EC
 $grey-light: #8E939E
 $grey-vanished: #D9DFE5
 $silver: #F3F4F6
 $blue-dark: #21293A
 $blue: #00ACD8
+$blue2: #E6F7FB
 $blue-light: #6ED6F1
 $blue-vanished: #DBF6FD
 $orange-dark: #BF2626
