--- a/styles/settings.sass
+++ b/styles/settings.sass
@@ -16,10 +16,11 @@ $grey3: #E7E9EC
 $grey-light: #8E939E
 $grey-vanished: #D9DFE5
 $silver: #F3F4F6
-$blue-dark: #21293A
+$blue-dark: #1C6091
 $blue: #00ACD8
 $blue2: #E6F7FB
 $blue-light: #6ED6F1
+$blue-light2: #81D5EB
 $blue-vanished: #DBF6FD
 $orange-dark: #BF2626
 $orange: #F47C66
