added types and fixed code, only download links desktop left

--- a/styles/settings.sass
+++ b/styles/settings.sass
@@ -14,6 +14,7 @@ $grey: #616875
 $grey2: #85909F
 $grey3: #E7E9EC
 $grey-light: #8E939E
+$grey-light2: #C2C7CF
 $grey-vanished: #D9DFE5
 $silver: #F3F4F6
 $blue-dark: #1C6091
