--- a/components/Button/Button.module.sass
+++ b/components/Button/Button.module.sass
@@ -8,7 +8,7 @@
   display: flex
   align-items: center
   justify-content: center
-  font-family: 'Work Sans'
+  font-family: $w
   font-weight: 500
   letter-spacing: -0.06em
   transition: background-color linear 250ms, border-color linear 250ms, border linear 250ms
@@ -35,4 +35,3 @@
 
   &:active
     border: 3px solid $grey3
-    
