--- a/components/ImageAndText/Description/Description.module.sass
+++ b/components/ImageAndText/Description/Description.module.sass
@@ -1,8 +1,7 @@
 @import ../../../styles/settings
 
 .div
-  color: $dark
-  font-family: 'Questrial'
+  font-family: $q
 
   h3
     +r(0, 991)
@@ -22,3 +21,9 @@
     margin: 0
     +r(0, 575)
       padding-right: 15px
+
+.textDark 
+  color: $dark
+
+.textLight
+  color: $grey-light2
