--- a/components/DownloadAppLinks/DownloadAppLinks.module.sass
+++ b/components/DownloadAppLinks/DownloadAppLinks.module.sass
@@ -10,7 +10,10 @@
     margin-top: 74px
     justify-content: center
     padding-left: 4px
-
+  +r(992, 1199)
+    padding: 0
+    margin-top: 74px
+    justify-content: center
   a
     padding: 0
 
@@ -18,6 +21,9 @@
   +r(0, 576)
     margin-right: 10px
   +r(576, 991)
+    margin-right: 19px
+    width: 180px
+  +r(992, 1199)
     margin-right: 19px
     width: 180px
 
